Update list view to take advantage of new config options

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -4,9 +4,10 @@
   filter = params[:filter]
   sort = params[:sort]
   sort_reverse = params[:sort_reverse]
-  filters_exist = !@properties.select{|property| property[:type] == :boolean}.empty?
+  properties = RailsAdmin.config(@abstract_model).list.fields.select { |f| f.visible? }.map do |f| f.to_hash end
+  filters_exist = !properties.select{|property| property[:type] == :boolean}.empty?
   # columns paginate
-  @style, @other, @properties = get_column_set(@properties)
+  @style, @other, properties = get_column_set(properties)
 %>
 
 <style type="text/css">
@@ -50,15 +51,19 @@
         </div>
         <ul id="moduleHeader">
           <li class="otherHeader otherHeaderLeft">...</li>
-          <% @properties.each do |property| %>
+          <% properties.each do |property| %>
           <% property_name = property[:name] %>
           <% property_pretty_name = property[:pretty_name] %>
           <li class="<%= get_column_type(property, "Header") %> <%= sort == property_name.to_s ? "columnSelected" : nil %>">
+            <% if property[:sortable?] %>
             <% sort_location = params.merge(:sort => property_name).reject{|key, value| key.to_sym == :sort_reverse}.merge(sort == property_name.to_s && sort_reverse != "true" ? {:sort_reverse => "true"} : {}) %>
             <%= link_to(property_pretty_name.upcase, sort_location, :ref => sort_location.to_json, :class => "headerSort") %>
             <% if sort == property_name.to_s %>
             <% image_name = sort_reverse ? "bullet_arrow_down.png" : "bullet_arrow_up.png"%>
             <%= link_to image_tag(image_name), sort_location, :ref => sort_location.to_json, :class => "headerSort" %>
+            <% end %>
+            <% else %>
+            <%= property_pretty_name.upcase %>
             <% end %>
           </li>
           <% end %>
@@ -71,7 +76,7 @@
         <ul class="infoRow <%= index % 2 == 0 ? nil : "greyRow" %>">
           <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
           <li class="otherRow otherLeft"><%= link_to("...", other_left, :ref => other_left.to_json) %></li>
-          <% @properties.each do |property| %>
+          <% properties.each do |property| %>
           <% output_type = format_output(property, object_property(object, property)) %>
           <li class="<%= get_column_type(property, "Row") %>"><%= output_type %></li>
           <% end %>
