Config DSL: renaming of some methods and variable names to be more self explanatory, regroup navigation configuration, some api docs and some cleanup

--- a/app/views/rails_admin/main/_navigation.html.erb
+++ b/app/views/rails_admin/main/_navigation.html.erb
@@ -1,6 +1,6 @@
 <%
-  max_visible_tabs = RailsAdmin::Config::Navigation.max_visible_tabs
-  models = RailsAdmin::Config::Navigation.visible_models  
+  max_visible_tabs = RailsAdmin::Config::Sections::Navigation.max_visible_tabs
+  models = RailsAdmin::Config::Sections::Navigation.visible_models  
 %>
       <ul id="nav">
         <li <%if @page_type == "dashboard" %>class="active"<% end %>><%= link_to(t("admin.dashboard.name"), rails_admin_dashboard_path) %></li>
