--- a/app/views/layouts/rails_admin/list.html.erb
+++ b/app/views/layouts/rails_admin/list.html.erb
@@ -74,7 +74,7 @@
         </ul>
         <h1><%= @plugin_name %></h1>
       </div>
-<%= render(:partial => 'rails_admin/main/navigation', :locals => {:abstract_models => @abstract_models}) %>
+<%= render(:partial => 'rails_admin/main/navigation') %>
 
       <div id="headerRight">
 <%= render(:partial => 'rails_admin/main/user_info', :locals => {:current_user => current_user}) %>
