Config DSL: Performance rewrite. Read-time resolution of model configuration overrideability was too expensive so all that is now done only once at application startup

--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -73,7 +73,7 @@
         </ul>
 
         <% @objects.each_with_index do |object, index| %>
-        <% @model_config.object = object %>
+        <% @model_config.bind(:object, object) %>
         <ul class="infoRow <%= index % 2 == 0 ? nil : "greyRow" %>">
           <% other_left = params.reject{|key, value| key == "set"}.merge(:set => params[:set].to_i - 1) %>
           <li class="otherRow otherLeft"><%= link_to("...", other_left, :ref => other_left.to_json) %></li>
