--- a/app/views/rails_admin/main/new.html.erb
+++ b/app/views/rails_admin/main/new.html.erb
@@ -5,15 +5,7 @@
       <div id="contentMainNew">
         <%= form_tag(rails_admin_create_path(:model_name => @abstract_model.to_param)) do %>
           <fieldset>
-            <h2><%= t("admin.new.basic_info")%></h2>
-            <div class="formSection">
-<%= render(:partial => 'properties', :properties => @properties) -%>
-            </div>
-
-<%= render(:partial => 'belongs_to_association', :collection => @abstract_model.belongs_to_associations) -%>
-<%= render(:partial => 'has_one_association', :collection => @abstract_model.has_one_associations) -%>
-<%= render(:partial => 'has_many_association', :collection => @abstract_model.has_many_associations) -%>
-<%= render(:partial => 'has_and_belongs_to_many_association', :collection => @abstract_model.has_and_belongs_to_many_associations) -%>
+<%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).create.groups) -%>
 
             <ul id="submitArea">
               <li id="saveContainer">
