--- a/app/views/rails_admin/main/_has_many_association.html.erb
+++ b/app/views/rails_admin/main/_has_many_association.html.erb
@@ -1,11 +1,11 @@
 <%
-  association_name = has_many_association[:name]
-  child_key = has_many_association[:child_key].first
-  collection = RailsAdmin::AbstractModel.new(has_many_association[:child_model]).all.map{|object| [object_label(object), object.id]}.sort_by{|object| object.first}
+  association_name = field.association[:name]
+  child_key = field.association[:child_key].first
+  collection = field.associated_collection.sort_by{|object| object.first}
 
   # for edit action
-  selected = @object.send(association_name).map{|object|
-    [object_label(object), object.id]
+  selected = field.bindings[:object].send(association_name).map{|object|
+    [field.associated_model_config.bind(:object, object).list.object_label, object.id]
   }.sort_by{|object| object.first}
 
   # if error accurs - show the selected associations
@@ -21,13 +21,7 @@
   collection = collection.map{|t|
     t if not selected.include?(t)
   }.compact
-
-  label = has_many_association[:pretty_name]
-  errors_exist = !(@object.errors[child_key].nil? || @object.errors[child_key].empty?)
 %>
-            <h2><%= label %></h2>
-            <div class="formSection">
-              <%= label_tag label %>
               <div class="many_header">
                 <input type="text" class="searchMany" value="Search <%= association_name %>" ref="<%= association_name %>" class="many_text" used="0" />
                 <p>
@@ -60,6 +54,3 @@
                 </div>
                 <span class="breakSpan"></span>
               </div>
-                <% if errors_exist %>
-                <span class="errorMessage"><%= "#{association_name.to_param.capitalize} #{@object.errors[association_name].first}" %></span>
-                <% end %>
