--- a/app/views/rails_admin/main/_belongs_to_association.html.erb
+++ b/app/views/rails_admin/main/_belongs_to_association.html.erb
@@ -1,13 +1,12 @@
 <%
-  child_key = field.association[:child_key].first
   collection = field.associated_collection.sort_by{|object| object.first}
-  selected = field.bindings[:object].send(child_key)
+  selected = field.bindings[:object].send(field.child_key)
 
   if selected.nil? && params["associations"]
-    selected = params["associations"][child_key.to_param.pluralize].to_i
+    selected = params["associations"][field.child_key.to_param.pluralize].to_i
   end
 
   model_name = field.abstract_model.to_param
 %>
-                  <label for="<%= model_name %>"><%= field.label %></label>
-                  <%= select model_name, child_key, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors ? "errorField" : nil}" %>
+                  <%= label_tag "#{model_name}_#{field.name}", field.label %>
+                  <%= select model_name, field.child_key, collection, {:include_blank => true, :selected => selected}, :class => "selectField #{field.has_errors? ? "errorField" : nil}" %>
