--- a/app/views/rails_admin/main/_big_decimal.html.erb
+++ b/app/views/rails_admin/main/_big_decimal.html.erb
@@ -1,2 +1,2 @@
-                  <%= label_tag field.label %>
+                  <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
                   <%= text_field field.abstract_model.to_param, field.name, :maxlength => field.length, :label => field.label %>
