--- a/app/views/rails_admin/main/_has_one_association.html.erb
+++ b/app/views/rails_admin/main/_has_one_association.html.erb
@@ -9,4 +9,4 @@
   end
 %>
                   <label for="associations[<%= association_name%>]"><%= field.label %></label>
-                  <%= select("associations", association_name, collection, {:id => association_name, :include_blank => true, :selected => selected}, :class => "#{field.has_errors ? "errorField" : nil}") %>
+                  <%= select("associations", association_name, collection, {:id => association_name, :include_blank => true, :selected => selected}, :class => "#{field.has_errors? ? "errorField" : nil}") %>
