--- a/app/views/rails_admin/main/_text.html.erb
+++ b/app/views/rails_admin/main/_text.html.erb
@@ -1,2 +1,2 @@
-              <%= label_tag field.label %>
+              <%= label_tag "#{field.abstract_model.to_param}_#{field.name}", field.label %>
               <%= text_area field.abstract_model.to_param, field.name, :cols => 80, :class => "textField", :value => field.value %>
