Fix has many associations input wiget's javascript

--- a/app/views/rails_admin/main/_has_and_belongs_to_many_association.html.erb
+++ b/app/views/rails_admin/main/_has_and_belongs_to_many_association.html.erb
@@ -41,7 +41,7 @@
                 </select>
               </div>
               <div class="many_controls">
-                <a href="javascript:void(0)" class="addAssoc"><img src="/images/selector-addall.gif" alt="Add all" class="add_all" /> <%= t("admin.new.chose_all")%></a>
+                <a href="javascript:void(0)" class="addAllAssoc"><img src="/images/selector-addall.gif" alt="Add all" class="add_all" /> <%= t("admin.new.chose_all")%></a>
                 <a href="javascript:void(0)" class="clearAssoc"><img src="/images/selector-removeall.gif" alt="Clear all" class="clear_all"/><%= t("admin.new.clear_all")%></a>
               </div>
               <div class="manyHidden">
