Add test where authentication is disabled. Added checks for presence of 'current_user' where required to make the test pass

--- a/app/views/rails_admin/main/_user_info.html.erb
+++ b/app/views/rails_admin/main/_user_info.html.erb
@@ -1,3 +1,4 @@
+<% if current_user %>
 <ul class="breadcrumb">
   <li>
     <a href="#"><%= current_user.email.split("@")[0] %></a>
@@ -7,3 +8,4 @@
     <a href="<%= destroy_user_session_path() %>"><%= t("admin.credentials.log_out")%></a>
   </li>
 </ul>
+<% end %>
