Don't display user info if there's no user

--- a/app/views/rails_admin/main/_user_info.html.erb
+++ b/app/views/rails_admin/main/_user_info.html.erb
@@ -1,3 +1,4 @@
+<% if current_user %>
 <div class="user_info">
   <img src="http://www.gravatar.com/avatar/<%=Digest::MD5.hexdigest current_user.email %>?s=30" alt="" />
   <ul>
@@ -9,3 +10,4 @@
     </li>
   </ul>
 </div>
+<% end %>
