--- a/app/views/rails_admin/main/_form_section.erb
+++ b/app/views/rails_admin/main/_form_section.erb
@@ -1,4 +1,6 @@
-<% visible_fields = form_section.registry.select{|f| f.visible?} %>
+<%
+  visible_fields = form_section.visible_fields
+%>
 <% if visible_fields.length > 0 %>
             <h2><%= form_section.label %></h2>
             <div class="formSection">
