--- a/app/views/rails_admin/main/new.html.erb
+++ b/app/views/rails_admin/main/new.html.erb
@@ -5,7 +5,7 @@
       <div id="contentMainNew">
         <%= form_tag(rails_admin_create_path(:model_name => @abstract_model.to_param)) do %>
           <fieldset>
-<%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).create.groups) -%>
+<%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).create.visible_groups) -%>
 
             <ul id="submitArea">
               <li id="saveContainer">
