--- a/app/views/rails_admin/main/delete.html.erb
+++ b/app/views/rails_admin/main/delete.html.erb
@@ -3,15 +3,15 @@
         </div>
 <%= render(:partial => 'layouts/rails_admin/flash', :locals => {:flash => flash}) -%>
         <div id="contentMainDelete">
-          <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= object_label(@object) %></strong>&rdquo;? All of the following related items will be deleted:</p>
+          <p>Are you sure you want to delete the <%= @abstract_model.pretty_name.downcase %> &ldquo;<strong><%= @model_config.bind(@object).list.object_label %></strong>&rdquo;? All of the following related items will be deleted:</p>
           <ul>
             <li>
-              <%= @abstract_model.pretty_name %>: <%= link_to(object_label(@object), rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => @object.id)) %>
+              <%= @abstract_model.pretty_name %>: <%= link_to(@model_config.bind(@object).list.object_label, rails_admin_edit_path(:model_name => @abstract_model.to_param, :id => @object.id)) %>
               <ul>
                 <% @abstract_model.has_many_associations.each do |association| %>
                 <% @object.send(association[:name]).reject{|child| child.nil?}.each do |child| %>
                 <li>
-                  One or more <%= @abstract_model.pretty_name.pluralize.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(object_label(child), rails_admin_edit_path(:model_name => association[:name].to_s.singularize.to_sym, :id => child.id)) %>
+                  One or more <%= @abstract_model.pretty_name.pluralize.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.object_label, rails_admin_edit_path(:model_name => association[:name].to_s.singularize.to_sym, :id => child.id)) %>
                 </li>
                 <% end %>
                 <% end %>
@@ -19,7 +19,7 @@
                 <% child = @object.send(association[:name]) %>
                 <% next if child.nil? %>
                 <li>
-                  A <%= @abstract_model.pretty_name.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(object_label(child), rails_admin_edit_path(:model_name => association[:name], :id => child.id)) %>
+                  A <%= @abstract_model.pretty_name.downcase %> in <%= association[:pretty_name].downcase %>: <%= link_to(RailsAdmin.config(child).list.object_label, rails_admin_edit_path(:model_name => association[:name], :id => child.id)) %>
                 </li>
                 <% end %>
               </ul>
