--- a/app/views/rails_admin/main/list.html.erb
+++ b/app/views/rails_admin/main/list.html.erb
@@ -95,7 +95,8 @@
       <% if @page_count.to_i > 1 %>
         <%= paginate(@current_page, @page_count, :url => params).html_safe %>
       <% end %>
-      <%= t "admin.list.record_count", :count => @record_count %>
+      <%= @record_count %>
+      <%= @model_config.abstract_model.model.model_name.human(:count => @record_count, :default => @record_count > 1 ? @model_config.list.label.downcase.pluralize : @model_config.list.label.downcase) %>
       <% if @page_count.to_i == 2 %>
         <%= link_to(t("admin.list.show_all"), params.merge(:all => true), :class => "showall") %>
       <% end %>
