Make field rendering a configurable option

--- a/app/views/rails_admin/main/_field.html.erb
+++ b/app/views/rails_admin/main/_field.html.erb
@@ -1,5 +1,6 @@
+<% field.root.bind(:view, self) %>
               <div class="field">
-<%= render :partial => field.partial.to_s, :locals => {:field => field} %>
+<%= field.render %>
                 <% if field.has_errors? %>
                 <span class="errorMessage"><%= "#{field.label } #{field.errors.first}" %></span>
                 <% end %>
