--- a/app/views/rails_admin/main/edit.html.erb
+++ b/app/views/rails_admin/main/edit.html.erb
@@ -14,19 +14,8 @@
       <div id="contentMainNew">
         <%= form_for(@object, :url => rails_admin_update_path(:model_name => @abstract_model.to_param, :id => @object.id), :html => { :multipart => true }) do %>
           <fieldset>
-<%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).edit.visible_groups) -%>
-
-            <ul id="submitArea">
-              <li id="saveContainer">
-                <%= submit_tag t("admin.new.save"), :class => "button default", :name => "_save", :id => "save_btn" %>
-              </li>
-              <li id="saveEditContainer">
-                <%= submit_tag t("admin.new.save_and_edit"), :class => "button", :name => "_add_edit", :id => "saveEdit_btn" %>
-              </li>
-              <li id="cancelContainer">
-                <%= submit_tag t("admin.new.cancel"), :class => "button", :name => "_continue", :id => "cancel_btn" %>
-              </li>
-            </ul>
+            <%= render(:partial => 'form_section', :collection => RailsAdmin::config(@object).edit.visible_groups) -%>
+            <%= render :partial => 'edit_submit_buttons' %>
           </fieldset>
         <% end %>
       </div>
