--- a/app/views/rails_admin/main/index.html.erb
+++ b/app/views/rails_admin/main/index.html.erb
@@ -37,7 +37,7 @@
           <div class="section">
             <h2><%= t("admin.history.name") %></h2>
             <div id="timeline">
-              <a href="javascript:void(0)" id="arrowLeft" ref="-1"><img src="/images/arrow_left.png" alt="Left" /></a>
+              <a href="javascript:void(0)" id="arrowLeft" ref="-1"><img src="/images/rails_admin/arrow_left.png" alt="Left" /></a>
               <div id="timelineSlider">
                 <% max = @history[0].number %>
                 <% @history.each{|t| max = t.number if t.number > max} %>
@@ -59,11 +59,11 @@
                   <% end %>
                 </ul>
                 <div id="handler">
-                  <img src="/images/handler.png"/>
+                  <img src="/images/rails_admin/handler.png"/>
                 </div>
               </div>
 
-              <a href="javascript:void(0)" id="arrowRight" ref="1"><img src="/images/arrow_right.png" alt="Right" /></a>
+              <a href="javascript:void(0)" id="arrowRight" ref="1"><img src="/images/rails_admin/arrow_right.png" alt="Right" /></a>
             </div>
             <div id="listingHistory">
 <%= render(:partial => 'history', :locals => {:month => Time.now.month, :year => Time.now.year, :history => @historyListing}) -%>
