--- a/public/stylesheets/rails_admin/create.css
+++ b/public/stylesheets/rails_admin/create.css
@@ -207,7 +207,7 @@ p.help{
 }
 
 .searchMany{
-  background:url(/images/magnifier.png) no-repeat;
+  background:url(/images/rails_admin/magnifier.png) no-repeat;
   padding-left:19px;
   padding-top:5px;
   font-size:11px;
