Trivial typo fix in wrapper element's id

--- a/app/views/layouts/rails_admin/delete.html.erb
+++ b/app/views/layouts/rails_admin/delete.html.erb
@@ -8,7 +8,7 @@
   <title><%= @page_name %></title>
 </head>
 <body>
-  <div id="wraper">
+  <div id="wrapper">
     <div id="header">
       <div id="headerLeft">
         <ul class="breadcrumb">
