--- a/app/views/layouts/rails_admin/dashboard.html.erb
+++ b/app/views/layouts/rails_admin/dashboard.html.erb
@@ -13,7 +13,7 @@
 
 </head>
 <body>
-  <div id="wraper">
+  <div id="wrapper">
     <div id="header">
       <div id="headerLeft">
         <ul class="breadcrumb">
